refactor form and input and buttons components / :; custom fields for radio is a complex for 2.x

--- a/catalog/view/theme/d_visualize/stylesheet/vz-component/form_group/default.css
+++ b/catalog/view/theme/d_visualize/stylesheet/vz-component/form_group/default.css
@@ -3,13 +3,14 @@
     padding-top: 7px;
   }
   &--required{
-    .vz-input__label:before,.vz-control-label:before{
+    >.vz-input__label:before,.vz-control-label:before{
       content: '* ';
       color: #F00;
       font-weight: bold;
     }
   }
   &--radio{
-
+    .vz-input--radio{
+    }
   }
 }
