--- a/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_account_field/default.twig
@@ -1,55 +1,64 @@
 <!-- > d_account_field_default -->
 <div class="vz-account-filed">
     {% if customer_groups|length > 1 %}
-        {% include component.form_group.template with component.form_group|merge({
-            type:'radio',
-            id:'input-customer_group',
-            name:'customer_group',
-            required: true,
-            radio_values: [{ 'val':1,'name': text_yes},{'val':0,'name':text_no}],
-            radio_values_val:'val',
-            radio_values_check: customer_group,
-            radio_values_name: 'name',
-            placeholder:entry_customer_group,
-            classes:'',
-            text_input:entry_customer_group,
-            error:error_customer_group,
-        }) %}
+        {% include component.form_group.template with{
+            form_group:{
+                label_text:entry_customer_group,
+                error:error_customer_group,
+                input:{
+                    type:'radio',
+                    id:'input-customer_group',
+                    name:'newsletter',
+                    value: customer_group,
+                    checked: customer_group,
+                    values: [{ 'value':1,'text': text_yes},{'value':0,'text':text_no}],
+                }
+            }
+        } %}
     {% endif %}
-    {% include component.d_name_field.template with  component.d_name_field|merge({form:form}) %}
-    {% include component.form_group.template with component.form_group|merge({
-        type:'email',
-        id:'input-email',
-        name:'email',
-        required:true,
-        value:email,
-        text_input:entry_email ,
-        placeholder:entry_email ,
-        error:error_email
-    }) %}
-
-    {% include component.form_group.template with component.form_group|merge({
-        type:'text',
-        id:'input-telephone',
-        name:'telephone',
-        required:true,
-        value:telephone,
-        text_input:entry_telephone ,
-        placeholder:entry_telephone ,
-        error:error_telephone
-    }) %}
-
+    {% include component.d_name_field.template %}
+    {% include component.form_group.template with{
+        form_group:{
+            label_text:entry_email ,
+            error:error_email,
+            required:true,
+            input:{
+                type:'text',
+                id:'input-email',
+                name:'email',
+                value:email,
+                placeholder:entry_email ,
+            }
+        }
+    } %}
+    {% include component.form_group.template with{
+        form_group:{
+            label_text:entry_telephone ,
+            error:error_telephone,
+            required:true,
+            input:{
+                type:'text',
+                id:'input-telephone',
+                name:'telephone',
+                value:telephone,
+                placeholder:entry_telephone ,
+            }
+        }
+    } %}
     {% if constant('VERSION') < '3.0.0.0' %}
-        {% include component.form_group.template with component.form_group|merge({
-            type:'text',
-            id:'input-fax',
-            name:'fax',
-            required:false,
-            value:fax,
-            text_input:entry_fax ,
-            placeholder:entry_fax ,
-            error:error_fax
-        }) %}
+        {% include component.form_group.template with{
+            form_group:{
+                label_text:entry_fax ,
+                error:error_fax,
+                input:{
+                    type:'text',
+                    id:'input-fax',
+                    name:'fax',
+                    value:fax,
+                    placeholder:entry_fax ,
+                }
+            }
+        } %}
     {% endif %}
 </div>
 <!-- /> d_account_field_default -->
