--- a/catalog/view/theme/d_visualize/template/component/d_address_field/default.twig
+++ b/catalog/view/theme/d_visualize/template/component/d_address_field/default.twig
@@ -1,120 +1,122 @@
 <!-- > d_address_field_default -->
-
-{% include component.form_group.template with component.form_group|merge({
-type:'text',
-id:'input-company',
-name:'company',
-required:true,
-value:company,
-text_input:entry_company ,
-placeholder:entry_company ,
-error:error_company
-}) %}
+{% include component.form_group.template with{
+    form_group:{
+        label_text:entry_company ,
+        error:error_confirm,
+        input:{
+            type:'text',
+            id:'input-company',
+            name:'company',
+            value:company,
+            placeholder:entry_company ,
+        }
+    }
+} %}
 
 {% if entry_website %}
-
-    {% include component.form_group.template with component.form_group|merge({
-    type:'text',
-    id:'input-website',
-    name:'website',
-    value:website,
-    text_input:entry_website ,
-    placeholder:entry_website ,
-    }) %}
-
+    {% include component.form_group.template with{
+        form_group:{
+            label_text:entry_website ,
+            error:error_confirm,
+            input:{
+                type:'text',
+                id:'input-website',
+                name:'website',
+                value:website,
+                placeholder:entry_website ,
+            }
+        }
+    } %}
 {% endif %}
+ {% include component.form_group.template with{
+     form_group:{
+         label_text:entry_address_1 ,
+         error:error_confirm,
+         input:{
+             type:'text',
+             id:'input-address-1',
+             name:'address_1',
+             value:address_1,
+             placeholder:entry_address_1 ,
+         }
+     }
+ } %}
 
-{% include component.form_group.template with component.form_group|merge({
-type:'text',
-id:'input-address-1',
-name:'address_1',
-required:true,
-value:address_1,
-text_input:entry_address_1 ,
-placeholder:entry_address_1 ,
-error:error_address_1
-}) %}
-{% include component.form_group.template with component.form_group|merge({
-type:'text',
-id:'input-address-2',
-name:'address_2',
-value:address_2,
-text_input:entry_address_2 ,
-placeholder:entry_address_2 ,
-}) %}
-{% include component.form_group.template with component.form_group|merge({
-type:'text',
-id:'input-city',
-name:'city',
-required:true,
-value:city,
-text_input:entry_city ,
-placeholder:entry_city ,
-error:error_city
-}) %}
-{% include component.form_group.template with component.form_group|merge({
-type:'text',
-id:'input-postcode',
-name:'postcode',
-required:true,
-value:postcode,
-text_input:entry_postcode ,
-placeholder:entry_postcode ,
-error:error_postcode
-}) %}
-{% include component.form_group.template with component.form_group|merge({
-type:'select',
-id:'input-country',
-name:'country_id',
-required: true,
-select_values:countries,
-select_values_val:'country_id',
-select_values_check: country_id,
-select_values_name: 'name',
-placeholder:text_select,
-text_input:entry_country,
-error:error_country,
-}) %}
-{#<div class="form-group required">#}
-    {#<label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-country"><span>{{ entry_country }}</span></label>#}
-    {#<div class="{% if form %}col-sm-10{% endif %}">#}
-        {#<div class="select-container">#}
-            {#<select name="country_id" id="input-country" class="field">#}
-                {#<option value="">{{ text_select }}</option>#}
-                {#{% for country in countries %}#}
-                    {#<option value="{{ country.country_id }}"#}
-                            {#{% if country.country_id == country_id %}selected="selected"{% endif %}>{{ country.name }}</option>#}
-                {#{% endfor %}#}
-            {#</select>#}
-        {#</div>#}
-        {#{% if error_country %}#}
-            {#<div class="text-danger">{{ error_country }}</div>#}
-        {#{% endif %}#}
-    {#</div>#}
-{#</div>#}
-{% include component.form_group.template with component.form_group|merge({
-type:'select',
-id:'input-zone',
-name:'zone_id',
-required: true,
-select_values:null,
-select_values_val:'zone_id',
-select_values_check: zone_id,
-select_values_name: 'name',
-placeholder:text_select,
-text_input:entry_zone,
-error:error_zone,
-}) %}
-{#<div class="form-group required">#}
-    {#<label class="{% if form %}col-sm-2{% endif %} field-label label-right-md" for="input-zone"><span>{{ entry_zone }}</span></label>#}
-    {#<div class="{% if form %}col-sm-10{% endif %}">#}
-        {#<div class="select-container">#}
-            {#<select name="zone_id" id="input-zone" class="field">#}
-            {#</select>#}
-        {#</div>#}
-        {#{% if error_zone %}#}
-            {#<div class="text-danger">{{ error_zone }}</div>#}
-        {#{% endif %}#}
-    {#</div>#}
-{#</div>#}
+ {% include component.form_group.template with{
+     form_group:{
+         label_text:entry_address_2 ,
+         error:error_confirm,
+         input:{
+             type:'text',
+             id:'input-address-2',
+             name:'address_2',
+             value:address_2,
+             placeholder:entry_address_2 ,
+         }
+     }
+ } %}
+{% include component.form_group.template with{
+    form_group:{
+        label_text:entry_city ,
+        error:error_confirm,
+        input:{
+            type:'text',
+            id:'input-city',
+            name:'city',
+            value:city,
+            placeholder:entry_city ,
+        }
+    }
+} %}
+{% include component.form_group.template with{
+    form_group:{
+        label_text:entry_postcode ,
+        error:error_confirm,
+        input:{
+            type:'text',
+            id:'input-postcode',
+            name:'postcode',
+            value:postcode,
+            placeholder:entry_postcode ,
+        }
+    }
+} %}
+{% include component.form_group.template with{
+    form_group:{
+        label_text:entry_country ,
+        error:error_confirm,
+        required: true,
+        input:{
+            type:'select',
+            id:'input-country',
+            name:'country_id',
+            value:country,
+            select_values:countries,
+            select_values_val:'country_id',
+            select_values_check: country_id,
+            select_values_name: 'name',
+            placeholder:entry_country ,
+        }
+    }
+} %}
+
+{% include component.form_group.template with{
+    form_group:{
+        label_text:entry_zone ,
+        error:error_confirm,
+        required: true,
+        input:{
+            type:'select',
+            id:'input-zone',
+            name:'zone_id',
+            value:zone,
+            select_values:null,
+            select_values_val:'zone_id',
+            select_values_check: zone_id,
+            select_values_name: 'name',
+            placeholder:entry_zone ,
+        }
+    }
+} %}
+
 <!-- /> d_address_field_default -->
